style: Fix spacing of sidebar button subtext

--- a/templates/css/style.scss
+++ b/templates/css/style.scss
@@ -745,6 +745,7 @@ body > header {
     small{
         display: block;
         color: var(--c-text-light);
+        margin-top: var(--s);
     }
 
     .donate{
